cmake_minimum_required(VERSION 3.27)
project(sistem_librarie_C C)

set(CMAKE_C_STANDARD 11)

add_executable(sistem_librarie_C main.c
        sistemi_librat.c
        sistemi_librat.h
        sistemi_studentet.c
        sistemi_studentet.h
        sistemi_studentet.c
        sistemi_studentet.c
        sistemi_studentet.c
        sistemi_studentet.c
        sistemi_studentet.c)
